Add a test script placeholder for better testing practices

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Một hệ thống thiết kế nhỏ gọn cho các component UI học tập cho lập trình viên mới.",
   "main": "index.js",
   "scripts": {
-    "test": "echo 'Error: no test specified' && exit 1"
+    "test": "echo 'Error: no test specified' && exit 1",
+    "test:unit": "jest" // Placeholder for unit tests"
   },
   "keywords": ["UI", "component", "design", "frontend"],
   "author": "Tên tác giả",
