Fix syntax error in package.json comments

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo 'Error: no test specified' && exit 1",
-    "test:unit": "jest" // Placeholder for unit tests"
+    "test:unit": "jest" // Placeholder for unit tests
   },
   "keywords": ["UI", "component", "design", "frontend"],
   "author": "Tên tác giả",
